--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack build"
   },
   "dependencies": {
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-svg": "^14.1.6",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
