--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "type": "module",
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack build",
-    "start" : "webpack build"
+    "build": "webpack --mode production",
+    "start": "node server.cjs"
   },
   "dependencies": {
     "css-loader": "^6.5.1",
+    "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-svg": "^14.1.6",
