--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-svg": "^14.1.6",
     "style-loader": "^3.3.1"
   },
