--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
   },
   "dependencies": {
     "@rails/webpacker": "^5.4.3",
-    "css-loader": "^6.5.1",
     "express": "^4.17.2",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
-    "react-svg": "^14.1.6",
-    "style-loader": "^3.3.1"
+    "react-svg": "^14.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.7",
+    "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.5",
     "@webpack-cli/info": "^1.4.1",
     "@webpack-cli/serve": "^1.6.1",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
